tests/errors/bug651145.vala
void main () {
	try {
		string foo;
	} finally {}
	try {
		string foo;
	} finally {}
}
